<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".ui.mainActivity.fragments.favourites.FavouritesFragment">

     <!--   <TableLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp">
            <TableRow
                android:layout_margin="8dp">

            </TableRow>

            <TableRow
                android:layout_margin="8dp">

            </TableRow>

        </TableLayout> -->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs1"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/tabs_background_style"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/subs_tab"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/comments_style"
                android:text="@string/title_subreddits" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/comments_tab"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/comments_style"
                android:text="@string/comments" />


    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs2"
        android:background="@drawable/tabs_background_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs1">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/all_tab"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/comments_style"
            android:text="@string/all" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Saved_tab"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/comments_style"
            android:text="@string/saved" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerFavourites"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs2" />

</androidx.constraintlayout.widget.ConstraintLayout>