<?xml version="1.0" encoding="utf-8"?>
  <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/light_blue"
    android:layout_height="match_parent"
    tools:context=".ui.mainActivity.fragments.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_profile"
        android:background="@drawable/subreddits_style"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="64dp"
            android:layout_marginTop="48dp"
            android:layout_height="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAccessibility="no" />

        <FrameLayout
            android:id="@+id/name_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/reg_button_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_photo">

            <TextView
                android:id="@+id/name"
                style="@style/bold_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:text="@null"
                android:textSize="16sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/username_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/reg_button_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_background">

            <TextView
                android:id="@+id/username"
                style="@style/bold_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:text="@null"/>

        </FrameLayout>

        <TableLayout
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_background">

            <TableRow>

                <TextView
                    android:id="@+id/comments_text"
                    style="@style/basic_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/comments_"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/comments_count"
                    style="@style/basic_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/subreddits_text"
                    style="@style/basic_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/subs_"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/subreddits_count"
                    style="@style/basic_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:textSize="12sp" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/friends_list_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/reg_button_style"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/friends_list"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/user_profile"
        app:layout_constraintStart_toStartOf="@+id/user_profile"
        app:layout_constraintTop_toBottomOf="@+id/user_profile" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/reg_button_style"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/clear_saved"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/user_profile"
        app:layout_constraintStart_toStartOf="@+id/user_profile"
        app:layout_constraintTop_toBottomOf="@id/friends_list_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/exit_button_style"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/exit"
        android:layout_marginTop="64dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/user_profile"
        app:layout_constraintStart_toStartOf="@+id/user_profile"
        app:layout_constraintTop_toBottomOf="@+id/clear_button" />

</androidx.constraintlayout.widget.ConstraintLayout>